<resources>
    <string name="app_name">7 Minutes Workout</string>
    <string name="title_image">Title Image</string>
    <string name="start">Start</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="image_done">image Done</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_completed_the_workout">You have completed the workout!</string>
    <string name="finish">FINISH</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="BMI">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="weight_in_kg">Weight (in KG)</string>
    <string name="height_in_cm">Height (In CM)</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="calculate">Calculate</string>
    <string name="us_units">US UNITS</string>
    <string name="metrics_units">METRICS UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="history">History</string>
</resources>