<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_layout_padding"
    tools:context=".ui.view.MainActivity">

    <ImageView
        android:id="@+id/ivTitleScreen"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/title_image"
        android:src="@drawable/img_main_page"
        app:layout_constraintBottom_toTopOf="@id/frmStartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frmStartButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circular_ripple_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTitleScreen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frmStartButton">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frmCalculateBMI"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/item_circular_color_accent_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/BMI"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_button_text_size"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/calculator"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frmHistory"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/item_circular_color_accent_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frmStartButton">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_history"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_button_text_size"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_gravity="center"
                android:textColor="@color/color_primary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frmCalculateBMI"
                app:layout_constraintVertical_bias="0.1" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>